# ili9341spi

./: .gitignore  README.md  build.sbt  pyproject.toml
.github/workflows/: cxxrtl-build.yml  cxxsim-tests.yml  dependency-graph.yml  synthesis.yml  unit-tests.yml
cxxrtl/: build.zig  build.zig.zon  main.cc
cxxrtl/src/: SimController.zig  SimThread.zig  SpiConnector.zig  UartConnector.zig  main.zig
cxxsim/: main.cc
ili9341spi/: __init__.py  __main__.py  targets.py
ili9341spi/rtl/: __init__.py  initter.py  lcd.py  proto.py  streamext.py
src/main/scala/com/example/newproject/: Top.scala
src/main/scala/ee/kivikakk/ili9341spi/: App.scala  Initter.scala  SPIFlashReader.scala  SpiFlashReader.scala  Top.scala
src/main/scala/ee/kivikakk/ili9341spi/lcd/: LCD.scala  LCDInit.scala  Lcd.scala  LcdCommand.scala  LcdInit.scala
src/main/scala/ee/kivikakk/ili9341spi/spi/: LCDCommand.scala  LCDInit.scala  SPI.scala  SPICommand.scala
src/test/scala/ee/kivikakk/ili9341spi/lcd/: LcdSpec.scala  SPISpec.scala
src/test/scala/ee/kivikakk/ili9341spi/spi/: SPISpec.scala
tests/: test_lcd.py  test_top.py
